test/2/sym-double-under.err
parse error: test/2/sym-double-under.ploy:1:3: symbols cannot contain repeated '_' characters.
  a__
    ^
